2003-04-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.test: Added a series of tests to check all lengths of input
	up to over 2 MD4 block lengths.
	* md4_check.c: Included the C code used to generate the new test
	results from the OpenSSL MD4 implementation.

2003-04-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.tcl: Implemented chunked reading from file or
	channel, added -file and -channel options to md4.
	Implemented hmac command with -key option.
	Provide MD4Init, MD4Update, MD4Final as per C-usage to permit use
	on streaming data.
	
2003-04-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.test: 
	* md4.tcl:
	* md4.man:
	* ChangeLog:  Initial versions.
